部分更改（等待后期修改）